--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "vue": "^3.2.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0"
